--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id="holder">
+	<div class="holder">
     <div id="item3">3</div>
     <div id="item1">1</div>
     <div id="item2">2</div>
